--- a/practice-projects/00-simple-web-server/package.json
+++ b/practice-projects/00-simple-web-server/package.json
@@ -4,7 +4,7 @@
   "description": "A simple web server without db (hardcoded data).",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "nodemon index.js"
   },
   "author": "Agustin Pacheco",
   "license": "GPL-3.0",
@@ -12,6 +12,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.49.0"
+    "eslint": "^8.49.0",
+    "nodemon": "^3.0.1"
   }
 }
