--- a/practice-projects/00-simple-web-server/package.json
+++ b/practice-projects/00-simple-web-server/package.json
@@ -9,7 +9,8 @@
   "author": "Agustin Pacheco",
   "license": "GPL-3.0",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
